Cleanup first two slides

--- a/prez.html
+++ b/prez.html
@@ -1,117 +1,101 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="utf-8" />
-		<title>Build an Online Portfolio with TypeScript</title>
-		<style>
-			body {
-	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-}
-h1, h2, h3 {
-	font-weight: 400;
-	margin-bottom: 0;
-}
-.remark-slide-content h1 { font-size: 3em; }
-.remark-slide-content h2 { font-size: 2em; }
-.remark-slide-content h3 { font-size: 1.6em; }
-.footnote {
-	position: absolute;
-	bottom: 3em;
-}
-li p { line-height: 1.25em; }
-.red { color: #fa0000; }
-.large { font-size: 2em; }
-a, a > code {
-	color: rgb(249, 38, 114);
-	text-decoration: none;
-}
-code {
-	background: none repeat scroll 0 0 #F8F8FF;
-  border: 1px solid #DEDEDE;
-  border-radius: 3px 	;
-  padding: 0 0.2em;
-}
-.remark-code, .remark-inline-code { font-family: "Bitstream Vera Sans Mono", "Courier", monospace; }
-.remark-code-line-highlighted     { background-color: #373832; }
-.pull-left {
-	float: left;
-	width: 47%;
-}
-.pull-right {
-	float: right;
-	width: 47%;
-}
-.pull-right ~ p {
-	clear: both;
-}
-#slideshow .slide .content code {
-	font-size: 0.8em;
-}
-#slideshow .slide .content pre code {
-	font-size: 0.9em;
-	padding: 15px;
-}
-.main-title, .title {
-	background: #272822;
-	color: #777872;
-	text-shadow: 0 0 20px #333;
-}
-.title h1, .title h2, .main-title h1, .main-title h2 {
-	color: #f3f3f3;
-	line-height: 0.8em;
-}
-/* Custom */
-.remark-code {
-	display: block;
-	padding: 0.5em;
-}
-
-		</style>
-	</head>
-	<body>
-		<textarea id="source">
+  <head>
+    <meta charset="utf-8" />
+    <title>Build an Online Portfolio with TypeScript</title>
+    <style>
+      body {
+        font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+      }
+      h1,
+      h2,
+      h3 {
+        font-weight: 400;
+        margin-bottom: 0;
+      }
+      .remark-slide-content h1 {
+        font-size: 3em;
+      }
+      .remark-slide-content h2 {
+        font-size: 2em;
+      }
+      .remark-slide-content h3 {
+        font-size: 1.6em;
+      }
+      .footnote {
+        position: absolute;
+        bottom: 3em;
+      }
+      li p {
+        line-height: 1.25em;
+      }
+      .red {
+        color: #fa0000;
+      }
+      .large {
+        font-size: 2em;
+      }
+      a,
+      a > code {
+        color: rgb(249, 38, 114);
+        text-decoration: none;
+      }
+      code {
+        background: none repeat scroll 0 0 #f8f8ff;
+        border: 1px solid #dedede;
+        border-radius: 3px;
+        padding: 0 0.2em;
+      }
+      .remark-code,
+      .remark-inline-code {
+        font-family: 'Bitstream Vera Sans Mono', 'Courier', monospace;
+      }
+      .remark-code-line-highlighted {
+        background-color: #373832;
+      }
+      .pull-left {
+        float: left;
+        width: 47%;
+      }
+      .pull-right {
+        float: right;
+        width: 47%;
+      }
+      .pull-right ~ p {
+        clear: both;
+      }
+      #slideshow .slide .content code {
+        font-size: 0.8em;
+      }
+      #slideshow .slide .content pre code {
+        font-size: 0.9em;
+        padding: 15px;
+      }
+      .main-title,
+      .title {
+        background: #272822;
+        color: #777872;
+        text-shadow: 0 0 20px #333;
+      }
+      .title h1,
+      .title h2,
+      .main-title h1,
+      .main-title h2 {
+        color: #f3f3f3;
+        line-height: 0.8em;
+      }
+      /* Custom */
+      .remark-code {
+        display: block;
+        padding: 0.5em;
+      }
+    </style>
+  </head>
+  <body>
+    <textarea id="source">
 class: center, middle, main-title
 
 # Build an Online Portfolio with TypeScript
-
-- [Introduction](#introduction)
-- [1: Setup a dev environment](#1-setup-a-dev-environment)
- - [1.1: Required software](#11-required-software)
-  - [1.1.1: Install Git](#111-install-git)
-  - [1.1.2: Install NodeJS](#112-install-nodejs)
- - [1.2: Optional software](#12-optional-software)
-  - [1.2.1: Pick a terminal emulator](#121-pick-a-terminal-emulator)
-  - [1.2.2: Pick an editor](#122-pick-an-editor)
-  - [1.2.3: Pick a package manager](#123-pick-a-package-manager)
- - [1.3: Version control](#13-version-control)
-  - [1.3.1: Create a Github account](#131-create-a-github-account)
-  - [1.3.2: Create an SSH key](#132-create-an-ssh-key)
-  - [1.3.3: Add your SSH key to Github](#133-add-your-ssh-key-to-github)
-- [2: Setup a project](#2-setup-a-project)
- - [2.1: Setup a boilerplate app](#21-setup-a-boilerplate-app)
-  - [2.1.1: Create React app](#211-create-react-app)
-  - [2.1.2: Add project to Github](#212-add-project-to-github)
- - [2.2: Configure deployment](#22-configure-deployment)
-  - [2.2.1: Prepare for deployment to Github Pages](#221-prepare-for-deployment-to-github-pages)
- - [2.3: Deploy the site to Github pages](#23-deploy-the-site-to-github-pages)
-- [3: Develop the site](#3-develop-the-site)
- - [3.1: Choose a UI framework](#31-choose-a-ui-framework)
- - [3.2: Make a homepage](#32-make-a-homepage)
- - [3.3: Add navigation](#33-add-navigation)
- - [3.4: Add a Navigation Menu](#34-add-a-navigation-menu)
- - [3.5: Add a Resume page](#35-add-a-resume-page)
- - [3.6: Add a Projects page](#36-add-a-projects-page)
-- [4: Customize (guided experimentation)](#4-customize-guided-experimentation)
- - [4.1: How would you change the default colors?](#41-how-would-you-change-the-default-colors)
- - [4.2: How about a page transition?](#42-how-about-a-page-transition)
- - [4.3: Can we add social media buttons?](#43-can-we-add-social-media-buttons)
- - [4.4: Can we add a Contact page?](#44-can-we-add-a-contact-page)
-- [Conclusion](#conclusion)
-- [Appendix](#appendix)
- - [Solution: 4.1](#solution-41)
- - [Solution: 4.2](#solution-42)
- - [Solution: 4.3](#solution-43)
- - [Solution: 4.4](#solution-44)
 
 
 ---
@@ -121,8 +105,6 @@ class: center, middle, main-title
 The following will take you step-by-step through the process of creating and
 deploying a basic, modern web app. The product in this case is a developer
 portfolio.
-
-![site result example](docs/image_000.png)
 
 Many steps can be altered or skipped entirely, depending on your existing setup,
 expertise and/or preferences, but this lesson is geared toward beginners. I will
@@ -1316,11 +1298,12 @@ class: center, middle, title
 
 ## Solution: 4.3
 
-		</textarea>
-		<script src="https://gnab.github.io/remark/downloads/remark-latest.min.js"></script>
-		<script>
-			var slideshow = remark.create();
-		</script>
-		<script></script>
-	</body>
+		</textarea
+    >
+    <script src="https://gnab.github.io/remark/downloads/remark-latest.min.js"></script>
+    <script>
+      var slideshow = remark.create();
+    </script>
+    <script></script>
+  </body>
 </html>
